Added the verify email function

--- a/config/integration.properties
+++ b/config/integration.properties
@@ -3,4 +3,5 @@ gsuite.sender.email.id=steve.rogers9091@gmail.com
 gsuite.sender.password=$hray@321
 gsuite.sender.name=Steve Rogers
 
-gsuite.recepient.email.id=shray.chadha@mycom-osi.com
+gsuite.recepient.email.id=steve.rogers9091@gmail.com
+gsuite.recepient.email.id.password=$hray@321
