--- a/config/gsuite.properties
+++ b/config/gsuite.properties
@@ -1,4 +1,13 @@
+#Outgoing mail connection settings
 mail.smtp.host=smtp.gmail.com
 mail.smtp.port=587
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
+
+#Incoming mail connection settings
+mail.imap.host=imap.gmail.com
+mail.imap.port=993
+mail.imap.socketFactory.class=javax.net.ssl.SSLSocketFactory
+mail.imap.socketFactory.fallback=false
+mail.imap.socketFactory.port=993
+mail.imap.ssl.enable=true
